[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ethical-ai-project"
version = "0.1.0"
description = "AI-assisted mini-project for Wisconsin breast cancer classification"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "jupyterlab>=4.0",
]

[tool.setuptools]
include-package-data = true
